# MCP-Server_Web_tools

./: INSTALL_DEPENDENCIES.md  README.md  activate.bat  context.txt  mcp_server.py  pyproject.toml  setup_environment.bat
tools/mcp_web_fetch/: __init__.py  constants.py  core.py  fetch_api.py
tools/mcp_web_search/: __init__.py  constants.py  core.py  google_api.py
web_tools_mcp_server.egg-info/: PKG-INFO  SOURCES.txt
