[project]
name = "web-tools-mcp-server"
version = "0.1.0"
description = "MCP Server với Web Search và Web Fetch tools cho việc duyệt web"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp",
    "requests", 
    "httpx[http2]",
    "h2",  # Required for HTTP/2 support
    "playwright",  # Modern browser automation (2025 recommended)
    "playwright-stealth",  # Anti-detection capabilities
    "requests-html",  # Legacy JS rendering (backup)
    "lxml-html-clean",  # Fix for lxml compatibility
    "beautifulsoup4",
    "lxml",
]
