[project]
name = "web-tools-mcp-server"
version = "0.1.0"
description = "MCP Server với Web Search và Web Fetch tools cho việc duyệt web"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp",
    "requests", 
    "httpx[http2]",
    "h2",  # Required for HTTP/2 support
    "playwright",  # Modern browser automation (2025 recommended)
    "playwright-stealth",  # Anti-detection capabilities
    "requests-html",  # Legacy JS rendering (backup)
    "lxml-html-clean",  # Fix for lxml compatibility
    "charset-normalizer",  # Modern charset detection (2025 standard)
    "beautifulsoup4",
    "lxml",
    "trafilatura",  # 2025 champion for content extraction (90.9% F1-score)
    "readability-lxml",  # Mozilla's algorithm (80.1% F1-score) - fallback
]
